removed mike from website, aligned right icons in footer, fixed ordering of sidebar in bootcamp page

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -85,7 +85,7 @@
           padding-top: 20px;
           padding-bottom: 20px;
           @include variables.md {
-            width: 30%;
+            width: 24%;
             padding-top: 0;
             padding-bottom: 0;
           }
